--- a/app/css/logre/logre.css
+++ b/app/css/logre/logre.css
@@ -79,18 +79,21 @@ body {
 }
 
 .nav-link:hover{
-    color: #c0392b;
+    color: #87CEFA;
 }
 
 .nav-item.nav-link.active{
-    color: #c0392b;
+    color: #87CEFA;
 }
 
 
 
 
-
-
+/* ########################################################################## */
+/* DATATABLES */
+/* ########################################################################## */
+th { font-size: 12px; }
+td { font-size: 12px; }
 
 
 
