20200317 - Needed changes to add some eye-candy to the UI

--- a/app/css/logre/logre.css
+++ b/app/css/logre/logre.css
@@ -79,11 +79,11 @@ body {
 }
 
 .nav-link:hover{
-    color: #87CEFA;
+    color: #835C3B;
 }
 
 .nav-item.nav-link.active{
-    color: #87CEFA;
+    color: #835C3B;
 }
 
 
@@ -158,15 +158,28 @@ td { font-size: 12px; }
 
 
 
+
+/* ########################################################################## */
+/* TAB: HOME; */
+/* ########################################################################## */
 .homeService{
   margin: 10px;
   padding: 50px;
-  /*
-  border-style: solid;
-  border-color: gray;
-  border-width: 1px;
-  */
-  width: 200px;
-  height: 200px;
+  width: 256px;
+  height: 256px;
   text-align: center;
+  background-image: url('../../img/trans/icon.png');
+  opacity:0.7;
+}
+
+.homeService:hover{
+    opacity:1.0;
+}
+
+.homeServiceIcon{
+  color: #585858;
+}
+
+.homeServiceIcon:hover{
+  /* color: #282828; */
 }
